# 2.7

./: .flake8  .pre-commit-config.yaml  client.py  dev-requirements.txt  mypy.ini  protocol.py  server.py  setup.cfg  tox.ini
.github/workflows/: main.yaml
client/: client.py
common/: commands.py  protocol.py  types.py
remote_tech/: client.py  server.py
remote_tech/common/: commands.py  exceptions.py  protocol.py
server/: server.py
tests/: commands_test.py  conftest.py  protocol_test.py  server_test.py  test_commands.py  test_protocol.py  test_server.py
